BUGFIX: Show text for collapsed side panel in IE8 and 9 (fixes #7469)
Altered IE CSS for CMS-panel to allow the text to display from top to
bottom.

--- a/admin/css/ie7.css
+++ b/admin/css/ie7.css
@@ -91,3 +91,6 @@ table.ss-gridfield-table tr.ss-gridfield-item.even { background: #F0F4F7; }
 .cms-content-header h2 { float: left; }
 .cms-content-header h2 .section-icon { display: none; }
 .cms-content-header .cms-content-header-tabs { position: absolute; right: 0; }
+
+.cms-panel-content-collapsed { position: relative; width: 40px; }
+.cms-panel-content-collapsed h2.cms-panel-header, .cms-panel-content-collapsed h3.cms-panel-header { zoom: 1; position: absolute; top: 10px; right: 10px; writing-mode: tb-rl; float: right; z-index: 5000; }
