--- a/admin/scss/_ieShared.scss
+++ b/admin/scss/_ieShared.scss
@@ -1,3 +1,23 @@
+//Mixin to adjust text in collapsed side panel and display vertically
+@mixin IEVerticalPanelText{
+	.cms-panel-content-collapsed {
+		position:relative;
+		width: 40px;		
+		h2, h3 {
+			&.cms-panel-header {
+				zoom: 1;
+				position:absolute;
+				top:10px;
+				right:10px;
+				writing-mode: tb-rl;  
+				float:right;
+				z-index:5000;
+			}
+		}	
+	}
+}
+
+
 //fix for background colors on buttons
 .cms .ss-ui-button {
 	background-color: $color-button-generic;
@@ -96,7 +116,6 @@
 		margin-left:0;
 	}
 }
-
 
 //fix for model admin filter styling 
 .ModelAdmin .cms-content-fields .cms-content-tools .cms-panel-content {
