--- a/admin/scss/ie8.scss
+++ b/admin/scss/ie8.scss
@@ -1,14 +1,9 @@
 @import 'themes/default';
 @import 'ieShared';
 
-
+//IE8 needs this defined inside .cms-panel
 .cms-panel {
-	.cms-panel-content-collapsed {
-		width: 40px;
-		h2, h3 {
-			display: none;
-		}
-	}
+	@include IEVerticalPanelText;
 }
 
 //fix for overlapping of tree view mode checkboxes
